-modifications dans home-page.html :  changement du nom de la class "button" pour "button-action" plus spécifique, création des class pour le bouton "restaurant-like" et insertion du coeur qui se remplit avec un dégradé de couleur; -création du bouton avec le coeur dans button-like.scss, -changement du nom des components en btn-new, button-action, ajout du undescore manquant pour le nom du loader; -dans main.scss insertion des nouveaux noms des boutons avec insertion du bouton like; -dans home_page.scss :  background blac rajouté aux cartes pour être raccord avec celui des boutons like, et ajout des prefixer border-radius, modification du selecteur icon-heart en like-before,

--- a/home_page.html
+++ b/home_page.html
@@ -37,7 +37,7 @@
             <h2 class="presentation__heading">Réservez le menu qui vous convient</h2>
             <p class="presentation__discover">Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
  
-                <button class="button ">
+                <button class="button-action">
                     Explorez nos restaurants
                 </button>
              
@@ -89,8 +89,13 @@
                     </div>
                 </a>
                 <!--coeur*2-->
-                <div class="restaurant__icon-heart--before"> <i class="fa-regular fa-heart"></i> </div>
-                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart"></i></div>
+                <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>                   
+                <div class="restaurant-like__after">
+                    <div class="restaurant-like__after-part-right"></div>
+                    <div class="restaurant-like__after-part-middle"></div>
+                    <div class="restaurant-like__after-part-left"></div>
+                </div>
+                
             </div>
 
             <!--carte 2-->
@@ -113,8 +118,12 @@
                     </div>
                 </a>
                 <!--coeur*2-->
-                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart"></i></div>
-                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart"></i></div>
+                <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>                   
+                <div class="restaurant-like__after">
+                    <div class="restaurant-like__after-part-right"></div>
+                    <div class="restaurant-like__after-part-middle"></div>
+                    <div class="restaurant-like__after-part-left"></div>
+                </div>
             </div>
 
             <!--carte 3-->
@@ -132,8 +141,12 @@
                     </div>
                 </a>
                 <!--coeur*2-->
-                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart"></i></div>
-                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart "></i></div>
+                <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>                   
+                <div class="restaurant-like__after">
+                    <div class="restaurant-like__after-part-right"></div>
+                    <div class="restaurant-like__after-part-middle"></div>
+                    <div class="restaurant-like__after-part-left"></div>
+                </div>
             </div>
 
             <!--carte 4-->
@@ -152,8 +165,12 @@
                     </div>
                 </a>
                 <!--coeur*2 pour switch-->
-                <div class="restaurant__icon-heart--before"><i class="fa-regular fa-heart"></i></div>
-                <div class="restaurant__icon-heart--after"><i class="fa-solid fa-heart"></i></div>
+                <button class="restaurant-like"><i class="fa-regular fa-heart restaurant-like__heart"></i></button>                   
+                <div class="restaurant-like__after">
+                    <div class="restaurant-like__after-part-right"></div>
+                    <div class="restaurant-like__after-part-middle"></div>
+                    <div class="restaurant-like__after-part-left"></div>
+                </div>
             </div>
  
         </section>
