création des fichiers html de base pour les menus avec modification du nom du fichier "menu_la note_enchantée.html" (rajout de l'underscore)

--- a/menu_la_note_enchantée.html
+++ b/menu_la_note_enchantée.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/2f306ee3dd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
-    <title>Ohmyfood : restaurant A la française</title>
+    <title>Ohmyfood : restaurant La note enchantée</title>
 </head>
 
 <body>
