-changements dans home-page.html : ajout de la class home-main-container pour différencier le main du html des menus et modification du nom des liens vers les menus pour tenir compte de leur nouveau nom de fichier; -modification des noms de fichiers html  des menus ;  insertion de l'icone et du logo dans le header de chacun de ces fic hiers; -indication du nouveau sélecteur pour le main de home_page.html; - dans menu.scss. : insertion des éléments de style du header pour les pages html des menus.

--- a/menu_french_style.html
+++ b/menu_french_style.html
@@ -14,10 +14,30 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/2f306ee3dd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
-    <title>Ohmyfood : restaurant La note enchantée</title>
+    <title>Ohmyfood : restaurant A la française</title>
 </head>
 
 <body>
+
+    <div class="loader">
+        <div class="loader__heading">Oh</div>
+        <div class="loader__heading">my</div>
+        <div class="loader__heading">food<span> .</span><span> .</span><span> .</span></div>
+    </div>
+
+    <header class="header-menu">
+
+        <div class="header-menu__return"><a href="home_page.html" title="retour à la page d'accueil"><i
+                    class="fa-solid fa-arrow-left"></i></a></div>
+        <h1 class="logo">ohmyfood</h1>
+
+    </header>
+
+
+    <main>
+
+    </main>
+
 
 </body>
 
