--- a/menu_the_palette_of_taste.html
+++ b/menu_the_palette_of_taste.html
@@ -19,6 +19,26 @@
 
 <body>
 
+    <div class="loader">
+        <div class="loader__heading">Oh</div>
+        <div class="loader__heading">my</div>
+        <div class="loader__heading">food<span> .</span><span> .</span><span> .</span></div>
+    </div>
+
+    <header class="header-menu">
+
+        <div class="header-menu__return"><a href="home_page.html" title="retour à la page d'accueil"><i
+                    class="fa-solid fa-arrow-left"></i></a></div>
+        <h1 class="logo">ohmyfood</h1>
+
+    </header>
+
+
+    <main>
+
+    </main>
+
+
 </body>
 
 </html>
