--- a/home_page.html
+++ b/home_page.html
@@ -29,7 +29,7 @@
         <h1>ohmyfood</h1>
     </header>
 
-    <main>
+    <main class="home-main-container">
         <section class="presentation">
             <div class="presentation__location"><i class="fa-solid fa-location-dot"></i>
                 <p>Paris, Belleville</p>
@@ -71,7 +71,7 @@
 
             <!--carte 1-->
             <div class="restaurant">
-                <a class="restaurant__link" href="La_palette_du_goût.html" title="restaurant gastronomique"
+                <a class="restaurant__link" href="menu_the_palette_of_taste.html" title="restaurant gastronomique"
                     target="_blank">
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
@@ -100,7 +100,7 @@
 
             <!--carte 2-->
             <div class="restaurant">
-                <a class="restaurant__link" href="La_note_enchantée.html" title="restaurant gastronomique"
+                <a class="restaurant__link" href="menu_the_enchanted_note.html" title="restaurant gastronomique"
                     target="_blank">
 
                     <div class="restaurant__card">
@@ -128,7 +128,7 @@
 
             <!--carte 3-->
             <div class="restaurant">
-                <a class="restaurant__link" href="A_la_Française.html" title="restaurant gastronomique" target="_blank">
+                <a class="restaurant__link" href="menu_french_style.html" title="restaurant gastronomique" target="_blank">
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
                             <img class="restaurant__img" src="assets/img/A_la_Française.jpg"
@@ -151,7 +151,7 @@
 
             <!--carte 4-->
             <div class="restaurant">
-                <a class="restaurant__link" href="menu_Le_délice_des_sens.html" title="restaurant gastronomique"
+                <a class="restaurant__link" href="menu_the_delite_of_the_senses.html" title="restaurant gastronomique"
                     target="_blank">
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
