--- a/menu_the_delite_of_the_senses.html
+++ b/menu_the_delite_of_the_senses.html
@@ -17,7 +17,28 @@
     <title>Ohmyfood : restaurant Le délice des sens</title>
 </head>
 
+
 <body>
+
+    <div class="loader">
+        <div class="loader__heading">Oh</div>
+        <div class="loader__heading">my</div>
+        <div class="loader__heading">food<span> .</span><span> .</span><span> .</span></div>
+    </div>
+
+    <header class="header-menu">
+
+        <div class="header-menu__return"><a href="home_page.html" title="retour à la page d'accueil"><i
+                    class="fa-solid fa-arrow-left"></i></a></div>
+        <h1 class="logo">ohmyfood</h1>
+
+    </header>
+
+
+    <main>
+
+    </main>
+
 
 </body>
 
