-changement du nommage du fichier home_page.html en index.html pour les serveurs avec suppression de target="_blank" pour les liens vers les pages menus pour tenir compte du bouton de retour sur la page d'accueil et éviter l'ouverture de trop de pages pour l'utilisateur ; -insertion de l'image dans le menu french_style.scss, remplacement du nom de la page principale par "index.html" dans  les liens suite à sa modificaition; -modifications du fichier button-action.scss :  changement de largeur, de la graduation des couleurs et de l'ombre portée, utilisation de lighten plutôt que brightness pour éviter l'éclaircissement de l'ombre au survol, -dans home_page.scss : suppression de la bordure dans la partie localisation et ajustement de l'ombre; -dans le fichier variables.scss : modification des valeurs de shadow-size, blur-effect et colour shadow pour marquer d'avantage les ombres;

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 
             <!--carte 1-->
             <div class="restaurant">
-                <a class="restaurant__link" href="menu_the_palette_of_taste.html" title="restaurant gastronomique"
-                    target="_blank">
+                <a class="restaurant__link" href="menu_the_palette_of_taste.html" title="restaurant gastronomique">
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
                             <img class="restaurant__img" src="assets/img//La_palette_du_goût.jpg"
@@ -100,8 +99,7 @@
 
             <!--carte 2-->
             <div class="restaurant">
-                <a class="restaurant__link" href="menu_the_enchanted_note.html" title="restaurant gastronomique"
-                    target="_blank">
+                <a class="restaurant__link" href="menu_the_enchanted_note.html" title="restaurant gastronomique">
 
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
@@ -128,7 +126,7 @@
 
             <!--carte 3-->
             <div class="restaurant">
-                <a class="restaurant__link" href="menu_french_style.html" title="restaurant gastronomique" target="_blank">
+                <a class="restaurant__link" href="menu_french_style.html" title="restaurant gastronomique">
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
                             <img class="restaurant__img" src="assets/img/A_la_Française.jpg"
@@ -151,8 +149,7 @@
 
             <!--carte 4-->
             <div class="restaurant">
-                <a class="restaurant__link" href="menu_the_delite_of_the_senses.html" title="restaurant gastronomique"
-                    target="_blank">
+                <a class="restaurant__link" href="menu_the_delite_of_the_senses.html" title="restaurant gastronomique">
                     <div class="restaurant__card">
                         <div class="restaurant__container-img">
                             <img class="restaurant__img" src="assets/img/le_délice_des_sens.jpg"
