--- a/menu_french_style.html
+++ b/menu_french_style.html
@@ -27,14 +27,19 @@
 
     <header class="header-menu">
 
-        <div class="header-menu__return"><a href="home_page.html" title="retour à la page d'accueil"><i
+        <div class="header-menu__return"><a href="index.html" title="retour à la page d'accueil"><i
                     class="fa-solid fa-arrow-left"></i></a></div>
         <h1 class="logo">ohmyfood</h1>
 
     </header>
 
+    <main class="">
 
-    <main>
+            <div class="image">
+                <img class="image" src="assets/img/A_la_Française.jpg"
+                    alt="restaurant à la Française">
+            </div>
+            
 
     </main>
 
