--- a/menu_the_delite_of_the_senses.html
+++ b/menu_the_delite_of_the_senses.html
@@ -28,7 +28,7 @@
 
     <header class="header-menu">
 
-        <div class="header-menu__return"><a href="home_page.html" title="retour à la page d'accueil"><i
+        <div class="header-menu__return"><a href="index.html" title="retour à la page d'accueil"><i
                     class="fa-solid fa-arrow-left"></i></a></div>
         <h1 class="logo">ohmyfood</h1>
 
