-modicifactions dans index.html : correction du nom de la carte n°2, accent sur le A du h3 de la carte n°3, et trait d'union dans le "p" de la carte n°4; -dans menu-the-delite-of-the-senses.html : changement du h3 en div pour le logo pour une meilleur spécification, le "main" est complété avec le titre, le coeur, les cartes entrées, plat et dessert avec intégration de l'icone check, et le bouton commander; -modifications dans typography.scss :  insertion des styles pour le h1, logo, card-container et menu heading, -dans le fichier button-like.scss : suppression des indications sur les positions pour les placer respectivement dans les fichiers home_page.scss et menu.scss, -renforcement du z-index pour le loader (insuffisant pour la page menu.scss), -dans le fichier logo.scss : suppression des fonts pour être placés dans typography.scss, -dans home_page.scss : modification des background pour les conteneurs et insertion des positions des icones "heart", -dans menu.scss : entièrement complété pour mettre en place le logo et son icone pour le retour à la page d'accueil, l'image du restaurant, le titre du restaurant avec le like, les menus et le bouton commander; -fichier variable.scss : changement de taille dans la variable "shadow-size".

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 alt="restaurant la note enchantée">
                         </div>
                         <div class="restaurant__footer">
-                            <h3>A la Française</h3>
+                            <h3>La note enchantée</h3>
                             <p>Charonne</p>
                         </div>
                         <div class="btn">
@@ -133,7 +133,7 @@
                                 alt="restaurant à la Française">
                         </div>
                         <div class="restaurant__footer">
-                            <h3>A la Française</h3>
+                            <h3>À la Française</h3>
                             <p>Cité Rouge</p>
                         </div>
                     </div>
@@ -157,12 +157,12 @@
                         </div>
                         <div class="restaurant__footer">
                             <h3>Le délice des sens</h3>
-                            <p>Folie Méricourt</p>
+                            <p>Folie-Méricourt</p>
                         </div>
                     </div>
                 </a>
                 <!--coeur*2 pour switch-->
-                <button class="restaurant-like"><i class="fa-regular fa-heart restaurant-like__heart"></i></button>                   
+                <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>                   
                 <div class="restaurant-like__after">
                     <div class="restaurant-like__after-part-right"></div>
                     <div class="restaurant-like__after-part-middle"></div>
