--- a/menu_the_delite_of_the_senses.html
+++ b/menu_the_delite_of_the_senses.html
@@ -17,7 +17,6 @@
     <title>Ohmyfood : restaurant Le délice des sens</title>
 </head>
 
-
 <body>
 
     <div class="loader">
@@ -30,15 +29,221 @@
 
         <div class="header-menu__return"><a href="index.html" title="retour à la page d'accueil"><i
                     class="fa-solid fa-arrow-left"></i></a></div>
-        <h1 class="logo">ohmyfood</h1>
+        <div class="logo">ohmyfood</div>
 
     </header>
 
+    <main class="main-container">
 
-    <main>
+        <div class="main-container__image">
+            <img class="main-container__img" src="assets/img/le_délice_des_sens.jpg"
+                alt="restaurant le délice des sens">
+        </div>
+
+        <div class="card-container">
+
+            <div class="card-container__heading">
+
+                <h1 class="card-container__restaurant">Le délice des sens</h1>
+
+                <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>
+
+                <div class="restaurant-like__after ">
+                    <div class="restaurant-like__after-part-right"></div>
+                    <div class="restaurant-like__after-part-middle"></div>
+                    <div class="restaurant-like__after-part-left"></div>
+                </div>
+
+            </div>
+
+            <section class="menu">
+                <h2 class="menu__heading">ENTRÉES</h2>
+
+                <div class="menu__container">
+
+                    <div class="menu__selection">
+
+                        <h3 class="menu__name">Tartare de thon</h3>
+
+                        <div class="menu__details">
+
+                            <p>Assaisonné au yuzu</p>
+
+                            <p>25 €</p>
+                        </div>
+
+                    </div>
+
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+
+                </div>
+
+                <div class="menu__container">
+
+                    <div class="menu__selection">
+
+                        <h3 class="menu__name">Bouchée de homard croustillant</h3>
+
+                        <div class="menu__details">
+                            <p>Et sa farandole de petits légumes</p>
+
+                            <p>35 €</p>
+                        </div>
+
+                    </div>
+
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+
+                </div>
+
+                <div class="menu__container">
+
+                    <div class="menu__selection">
+
+                        <h3 class="menu__name">Velouté de cèpes</h3>
+
+                        <div class="menu__details">
+                            <p>Aux truffes</p>
+
+                            <p>20 €</p>
+                        </div>
+
+                    </div>
+
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+
+                </div>
+
+
+            </section>
+
+            <section class="menu">
+
+                <h2 class="menu__heading">PLATS</h2>
+
+                <div class="menu__container">
+
+                    <div class="menu__selection">
+
+                        <h3 class="menu__name">Poulet rôti aux herbes de provence</h3>
+
+                        <div class="menu__details">
+                            <p>Et sa crème de truffe</p>
+
+                            <p>40 €</p>
+                        </div>
+
+                    </div>
+
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+
+                </div>
+
+                <div class="menu__container">
+
+                    <div class="menu__selection">
+
+                        <h3 class="menu__name">Langouste rôtie</h3>
+
+                        <div class="menu__details">
+
+                            <p>Et ses légumes de saison</p>
+
+                            <p>35 €</p>
+                        </div>
+
+                    </div>
+
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+
+                </div>
+
+                <div class="menu__container">
+
+                    <div class="menu__selection">
+
+                        <h3 class="menu__name">Côte de boeuf angus</h3>
+
+                        <div class="menu__details">
+                            <p>Et sa purée de panais</p>
+
+                            <p>44 €</p>
+                        </div>
+
+                    </div>
+
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+
+                </div>
+
+            </section>
+
+            <section class="menu">
+
+                <h2 class="menu__heading">DESSERTS</h2>
+
+                <div class="menu__container">
+
+                    <div class="menu__selection">
+
+                        <h3 class="menu__name">Farandole de desserts</h3>
+                        <div class="menu__details">
+                            <p>Du chef</p>
+
+                            <p>18 €</p>
+                        </div>
+
+                    </div>
+
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+
+                </div>
+
+                <div class="menu__container">
+
+                    <div class="menu__selection">
+
+                        <h3 class="menu__name">Crème brulée</h3>
+
+                        <div class="menu__details">
+
+                            <p>Revisitée</p>
+
+                            <p>22 €</p>
+                        </div>
+
+                    </div>
+
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+
+                </div>
+
+                <div class="menu__container">
+
+                    <div class="menu__selection">
+
+                        <h3 class="menu__name">Tiramisu</h3>
+
+                        <div class="menu__details">
+
+                            <p>À la noisette</p>
+
+                            <p>23 €</p>
+
+                        </div>
+
+                    </div>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+
+            </section>
+
+            <button class="button-action">
+                Commander
+            </button>
+
+        </div>
 
     </main>
-
 
 </body>
 
