--- a/menu_the_enchanted_note.html
+++ b/menu_the_enchanted_note.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/2f306ee3dd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
-    <title>Ohmyfood : carte du restaurant La note enchantée</title>
+    <title>Ohmyfood : restaurant La note enchantée</title>
 </head>
 
 <body>
@@ -33,201 +33,10 @@
 
     </header>
 
-    <div class="heading-image">
-        <img class="main-container__img"src="assets/img//La_note_enchantée.jpg" alt="restaurant la note enchantée">
-    </div>
 
-    <main class="main-container">
-
-        <div class="main-container__heading">
-
-            <h1 class="main-container__restaurant">La note enchantée</h1>
-
-            <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>
-
-            <div class="restaurant-like__after ">
-                <div class="restaurant-like__after-part-right"></div>
-                <div class="restaurant-like__after-part-middle"></div>
-                <div class="restaurant-like__after-part-left"></div>
-            </div>
-
-        </div>
-
-        <section class="menu">
-
-            <div class="menu__title-container">
-
-                <h2 class="menu__heading">ENTRÉES</h2>
-                <div class="menu__underline"></div>
-
-            </div>
-
-            <div class="menu__selection">
-
-                <div class="menu__container-selection">
-                    <h3 class="menu__name">Ravioles de foie gras</h3>
-                    <p class="menu__details">Accompagnés de leur crème à la truffe<span class="menu__price">25 €</span></p>
-
-                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                </div>
-
-            </div>
-
-            </div>
-
-            <div class="menu__selection">
-
-                <div class="menu__container-selection">
-
-                    <h3 class="menu__name">Caviar osciètre</h3>
-                    <p class="menu__details">Sur blini à la farine de blé noir<span class="menu__price">35 €</span></p>
-                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                </div>
-
-            </div>
-
-            <div class="menu__selection">
-
-                <div class="menu__container-selection">
-
-                    <h3 class="menu__name">Homard et espuma de pommes de terre au paprika</h3>
-
-                    <p class="menu__details">Mariné aux zests d'orange<span class="menu__price">20 €</span></p>
-                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                </div>
-
-            </div>
-
-            <div class="menu__selection">
-
-                <div class="menu__container-selection">
-
-                    <h3 class="menu__name">Foie gras de canard cuit entier</h3>
-
-                    <p class="menu__details">Confiture de figue et pain toasté<span class="menu__price">35 €</span></p>
-                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                </div>
-
-            </div>
-
-        </section>
-
-        <section class="menu">
-
-            <div class="menu__title-container">
-
-                <h2 class="menu__heading">PLATS</h2>
-
-                <div class="menu__underline"></div>
-
-            </div>
-
-            <div class="menu__selection">
-
-                <div class="menu__container-selection">
-
-                    <h3 class="menu__name">Noix de coquilles Saint-Jacques</h3>
-                    <p class="menu__details">Sur lit de purée céleri-rave<span class="menu__price">40 €</span></p>
-                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                </div>
-
-            </div>
-
-            </div>
-
-            <div class="menu__selection">
-
-                <div class="menu__container-selection">
-
-                    <h3 class="menu__name">Langoustine poêlée</h3>
-                    <p class="menu__details">Purée de patate douce<span class="menu__price">35 €</span></p>
-                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                </div>
-
-            </div>
-
-            <div class="menu__selection">
-
-                <div class="menu__container-selection">
-
-                    <h3 class="menu__name">Mijoté de queue de boeuf</h3>
-
-                    <p class="menu__details">Et riz sauvage aux zests de citron<span class="menu__price">44 €</span></p>
-                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                </div>
-
-            </div>
-
-        </section>
-
-        <section class="menu">
-
-            <div class="menu__title-container">
-
-                <h2 class="menu__heading">DESSERTS</h2>
-                <div class="menu__underline"></div>
-
-            </div>
-
-            <div class="menu__selection">
-
-                <div class="menu__container-selection">
-                    <h3 class="menu__name">Macaron noisette et chocolat</h3>
-                    <p class="menu__details">GLace au caramel brun et sel de Guérande<span class="menu__price">18 €</span></p>
-                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                </div>
-
-            </div>
-
-
-            <div class="menu__selection">
-
-                <div class="menu__container-selection">
-
-                    <h3 class="menu__name">Baba au rhum revisité</h3>
-                    <p class="menu__details">Avec son coulis de citron<span class="menu__price">22 €</span></p>
-                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                </div>
-
-            </div>
-
-
-            <div class="menu__selection">
-
-                <div class="menu__container-selection">
-                    <h3 class="menu__name">Tarte au citron meringuée</h3>
-                    <p class="menu__details">Destructurée<span class="menu__price">23 €</span></p>
-                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                </div>
-
-            </div>
-
-        </section>
-
-        <div class="button-container">
-            <button class="button-action">
-                Commander
-            </button>
-        </div>
+    <main>
 
     </main>
-
-    <footer>
-        <nav class="nav">
-            <h2 class="nav__logo">ohmyfood</h2>
-            <ul class="nav__container">
-                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
-                            class="fa-solid fa-utensils"></i>Proposer un
-                        restaurant</a></li>
-                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
-                            class="fa-solid fa-handshake-angle fa-sm"></i>Devenir
-                        partenaire</a></li>
-                <li><a class="nav__link nav__link--color" href="#" title="click here">Mentions légales</a></li>
-                <li><a class="nav__link nav__link--color" href="mailto:example@example.com"
-                        title="click here">Contact</a></li>
-            </ul>
-        </nav>
-    </footer>
 
 
 </body>
