-changements dans menu_the_delite_of_the_senses.html : insertion de l'image du restaurant, modifications de la structure et des noms des classes pour intégrer l'animation "check"; -fichier menu_the_enchanted_note.html complété de l'image du restaurant, de la partie main et du footer; -changements dans typography.scss : insertion des breakpoints pour les mobiles de petite taille afin d'ajuster l’espacement des titres et logos par rapport aux icones, suppression de la version tablette pour les h2 (le rendu était trop petit); -modification de l'inclinaison de la graduation sur le background : passe à l'horizontal; -changements dans home_page.scss : augmentation du padding-bottom  dans le selecteur « functioning » en version tablette pour aligner ses éléments en face des cartes , ajout d'un padding sur les cartes en version tablette, marge mise à 0 sur le "heading" des cartes en version tablettes, ajustement de la taille des cartes avec insertion d'une marge pour la version tablette, rajout d'une marge en version desktop , indication d'une hauteur de 350 px dans le conteneur "restaurant__card en version desktop pour optimiser l’espace remplit par les cartes; -changements dans le fichier menu_scss :  précision de height auto pour le header, application de la propriété flex sur la partie main avec ajout d'un padding-bottom pour ajuster sa distance vis-à-vis du footer, précision sur la position du main pour les petites versions de mobiles avec un breakpoint permettant de coller l'image à la partie main, ajustement du positionnement de l'image, modification du point de départ haut de l'icone "heart", modification des propriétés de la partie menu  suite aux changement de structure et de class dans le html, intégration de l'animation "chekc", applicatio de la propriété flex sur le bouton "commander" pour le centrer et précision de la position relative sur le footer pour ajuster et garder sa place, changement de « hover » par « active » pour mettre en action l’animation du che

--- a/menu_the_delite_of_the_senses.html
+++ b/menu_the_delite_of_the_senses.html
@@ -33,175 +33,187 @@
 
     </header>
 
+    <div class="heading-image">
+        <img class="main-container__img" src="assets/img/le_délice_des_sens.jpg" alt="restaurant le délice des sens">
+    </div>
+
     <main class="main-container">
 
-        <div class="main-container__image">
-            <img class="main-container__img" src="assets/img/le_délice_des_sens.jpg"
-                alt="restaurant le délice des sens">
+        <div class="main-container__heading">
+
+            <h1 class="main-container__restaurant">Le délice des sens</h1>
+
+            <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>
+
+            <div class="restaurant-like__after ">
+                <div class="restaurant-like__after-part-right"></div>
+                <div class="restaurant-like__after-part-middle"></div>
+                <div class="restaurant-like__after-part-left"></div>
+            </div>
+
         </div>
 
-        <div class="card-container">
+        <section class="menu">
 
-            <div class="card-container__heading">
+            <div class="menu__title-container">
 
-                <h1 class="card-container__restaurant">Le délice des sens</h1>
+                <h2 class="menu__heading">ENTRÉES</h2>
+                <div class="menu__underline"></div>
 
-                <button class="restaurant-like"><i class="fa-regular fa-heart"></i></button>
+            </div>
 
-                <div class="restaurant-like__after ">
-                    <div class="restaurant-like__after-part-right"></div>
-                    <div class="restaurant-like__after-part-middle"></div>
-                    <div class="restaurant-like__after-part-left"></div>
+            <div class="menu__selection">
+
+                <div class="menu__container-selection">
+                    <h3 class="menu__name">Tartare de thon</h3>
+                    <p class="menu__details">Assaisonné au yuzu<span class="menu__price">25 €</span></p>
+
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
 
             </div>
 
-            <section class="menu">
-                <h2 class="menu__heading">ENTRÉES</h2>
+            </div>
 
-                <div class="menu__container">
+            <div class="menu__selection">
 
-                    <div class="menu__selection">
-                        <h3 class="menu__name">Tartare de thon</h3>
-                        <div class="menu__details">
-                            <p>Assaisonné au yuzu</p>
-                            <p>25 €</p>
-                        </div>
-                        <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                    </div>
+                <div class="menu__container-selection">
 
-
+                    <h3 class="menu__name">Bouchée de homard croustillant</h3>
+                    <p class="menu__details">Et sa farandole de petits légumes<span class="menu__price">35 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
 
-                <div class="menu__container">
+            </div>
 
-                    <div class="menu__selection">
+            <div class="menu__selection">
 
-                        <h3 class="menu__name">Bouchée de homard croustillant</h3>
-                        <div class="menu__details">
-                            <p>Et sa farandole de petits légumes</p>
-                            <p>35 €</p>
-                        </div>
-                        <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                <div class="menu__container-selection">
 
-                    </div>
+                    <h3 class="menu__name">Velouté de cèpes</h3>
 
-
+                    <p class="menu__details">Aux truffes<span class="menu__price">20 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
 
-                <div class="menu__container">
+            </div>
 
-                    <div class="menu__selection">
-                        <h3 class="menu__name">Velouté de cèpes</h3>
-                        <div class="menu__details">
-                            <p>Aux truffes</p>
-                            <p>20 €</p>
-                        </div>
-                        <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                    </div>
+        </section>
 
+        <section class="menu">
 
-                </div>
-
-            </section>
-
-            <section class="menu">
+            <div class="menu__title-container">
 
                 <h2 class="menu__heading">PLATS</h2>
 
-                <div class="menu__container">
+                <div class="menu__underline"></div>
 
-                    <div class="menu__selection">
-                        <h3 class="menu__name">Poulet rôti aux herbes de provence</h3>
-                        <div class="menu__details">
-                            <p>Et sa crème de truffe</p>
-                            <p>40 €</p>
-                        </div>
-                        <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                    </div>
+            </div>
 
+            <div class="menu__selection">
+
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Poulet rôti aux herbes de provence</h3>
+                    <p class="menu__details">Et sa crème de truffe<span class="menu__price">40 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
 
-                <div class="menu__container">
+            </div>
 
-                    <div class="menu__selection">
-                        <h3 class="menu__name">Langouste rôtie</h3>
-                        <div class="menu__details">
-                            <p>Et ses légumes de saison</p>
-                            <p>35 €</p>
-                        </div>
-                        <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+            </div>
 
-                    </div>
+            <div class="menu__selection">
 
+                <div class="menu__container-selection">
 
+                    <h3 class="menu__name">Langouste rôtie</h3>
+                    <p class="menu__details">Et ses légumes de saison<span class="menu__price">35 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
 
-                <div class="menu__container">
+            </div>
 
-                    <div class="menu__selection">
-                        <h3 class="menu__name">Côte de boeuf angus</h3>
-                        <div class="menu__details">
-                            <p>Et sa purée de panais</p>
-                            <p>44 €</p>
-                        </div>
-                        <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                    </div>
+            <div class="menu__selection">
 
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Côte de boeuf angus</h3>
+
+                    <p class="menu__details">Et sa purée de panais<span class="menu__price">44 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
 
-            </section>
+            </div>
 
-            <section class="menu">
+        </section>
+
+        <section class="menu">
+
+            <div class="menu__title-container">
 
                 <h2 class="menu__heading">DESSERTS</h2>
+                <div class="menu__underline"></div>
 
-                <div class="menu__container">
+            </div>
 
-                    <div class="menu__selection">
-                        <h3 class="menu__name">Farandole de desserts</h3>
-                        <div class="menu__details">
-                            <p>Du chef</p>
-                            <p>18 €</p>
-                        </div>
-                        <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                    </div>
+            <div class="menu__selection">
 
+                <div class="menu__container-selection">
+                    <h3 class="menu__name">Farandole de desserts</h3>
+                    <p class="menu__details">Du chef<span class="menu__price">18 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
 
-                <div class="menu__container">
+            </div>
 
-                    <div class="menu__selection">
-                        <h3 class="menu__name">Crème brulée</h3>
-                        <div class="menu__details">
-                            <p>Revisitée</p>
-                            <p>22 €</p>
-                        </div>
-                        <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                    </div>
+            <div class="menu__selection">
 
+                <div class="menu__container-selection">
+
+                    <h3 class="menu__name">Crème brulée</h3>
+                    <p class="menu__details">Revisitée<span class="menu__price">22 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
                 </div>
 
-                <div class="menu__container">
+            </div>
 
-                    <div class="menu__selection">
-                        <h3 class="menu__name">Tiramisu</h3>
-                        <div class="menu__details">
-                            <p>À la noisette</p>
-                            <p>23 €</p>
-                            <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
-                        </div>
-                    </div>
+            <div class="menu__selection">
 
-            </section>
+                <div class="menu__container-selection">
+                    <h3 class="menu__name">Tiramisu</h3>
+                    <p class="menu__details">À la noisette<span class="menu__price">23 €</span></p>
+                    <div class="menu__check"><i class="fa-solid fa-circle-check"></i></div>
+                </div>
 
+            </div>
+
+        </section>
+
+        <div class="button-container">
             <button class="button-action">
                 Commander
             </button>
-
         </div>
 
     </main>
+
+    <footer>
+        <nav class="nav">
+            <h2 class="nav__logo">ohmyfood</h2>
+            <ul class="nav__container">
+                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
+                            class="fa-solid fa-utensils"></i>Proposer un
+                        restaurant</a></li>
+                <li><a class="nav__link-icon nav__link--color" href="#" title="click here"><i
+                            class="fa-solid fa-handshake-angle fa-sm"></i>Devenir
+                        partenaire</a></li>
+                <li><a class="nav__link nav__link--color" href="#" title="click here">Mentions légales</a></li>
+                <li><a class="nav__link nav__link--color" href="mailto:example@example.com"
+                        title="click here">Contact</a></li>
+            </ul>
+        </nav>
+    </footer>
 
 </body>
 
