-dans menu.scss : insertion de l'animation faisant apparaître les noms des recettes les unes après les autres dès le démarrage de la page, -complément dans les fichiers html des menus "les délices des sens" et "la note enchantée" : ajout des classes pour cibler l'animation appliquée à chaque recette.

--- a/menu_the_delite_of_the_senses.html
+++ b/menu_the_delite_of_the_senses.html
@@ -62,7 +62,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--first-apparition">
 
                 <div class="menu__container-selection">
                     <h3 class="menu__name">Tartare de thon</h3>
@@ -75,7 +75,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--second-apparition">
 
                 <div class="menu__container-selection">
 
@@ -86,7 +86,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--third-apparition">
 
                 <div class="menu__container-selection">
 
@@ -110,7 +110,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--first-apparition">
 
                 <div class="menu__container-selection">
 
@@ -123,7 +123,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--second-apparition">
 
                 <div class="menu__container-selection">
 
@@ -134,7 +134,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--third-apparition">
 
                 <div class="menu__container-selection">
 
@@ -157,7 +157,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--first-apparition">
 
                 <div class="menu__container-selection">
                     <h3 class="menu__name">Farandole de desserts</h3>
@@ -167,7 +167,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--second-apparition">
 
                 <div class="menu__container-selection">
 
@@ -178,7 +178,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--third-apparition">
 
                 <div class="menu__container-selection">
                     <h3 class="menu__name">Tiramisu</h3>
