--- a/menu_the_enchanted_note.html
+++ b/menu_the_enchanted_note.html
@@ -62,7 +62,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--first-apparition">
 
                 <div class="menu__container-selection">
                     <h3 class="menu__name">Ravioles de foie gras</h3>
@@ -76,7 +76,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--second-apparition">
 
                 <div class="menu__container-selection">
 
@@ -87,7 +87,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--third-apparition">
 
                 <div class="menu__container-selection">
 
@@ -99,7 +99,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--fourth-apparition">
 
                 <div class="menu__container-selection">
 
@@ -123,7 +123,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--first-apparition">
 
                 <div class="menu__container-selection">
 
@@ -136,7 +136,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--second-apparition">
 
                 <div class="menu__container-selection">
 
@@ -147,7 +147,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--third-apparition">
 
                 <div class="menu__container-selection">
 
@@ -170,7 +170,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--first-apparition">
 
                 <div class="menu__container-selection">
                     <h3 class="menu__name">Macaron noisette et chocolat</h3>
@@ -181,7 +181,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--second-apparition">
 
                 <div class="menu__container-selection">
 
@@ -192,7 +192,7 @@
 
             </div>
 
-            <div class="menu__selection">
+            <div class="menu__selection menu__selection--third-apparition">
 
                 <div class="menu__container-selection">
                     <h3 class="menu__name">Tarte au citron meringuée</h3>
